--- a/.gitlab-ci.yml.dist
+++ b/.gitlab-ci.yml.dist
@@ -14,6 +14,11 @@ include:
   - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/analyze/analyze-typoscript-lint.yaml'
   - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/analyze/analyze-yaml-lint.yaml'
   - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/analyze/analyze-xml-lint.yaml'
+  - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/deploy/deploy-feature.yaml'
+  - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/deploy/deploy-feature-rollback.yaml'
+  - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/deploy/deploy-feature-stop.yaml'
+  - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/deploy/deploy-feature-stop-downstream.yaml'
+  - 'https://raw.githubusercontent.com/move-elevator/gitlab-ci-templates/main/deploy/deploy-prod.yaml'
 
 #-----------------------------------------------------------------------------------------------------------------------
 # CONFIGURATION (overrides)
@@ -21,5 +26,11 @@ include:
 variables:
   BUILD_COMPOSER_VERSION: "2.8"
   BUILD_NODE_VERSION: "22"
+  FEATURE_BRANCH_NAME_REGEX: '^JIRA-.*$'
+  # SSH configuration
+  SSH_USER_STAGE:
+  SSH_HOST_STAGE:
+  SSH_USER_PROD:
+  SSH_HOST_PROD:
 
 
