--- a/deploy/deploy-feature-stop-downstream.yaml
+++ b/deploy/deploy-feature-stop-downstream.yaml
@@ -6,11 +6,8 @@ deploy:feature:stop:downstream:
   extends:
     - .ssh
   rules:
-    - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
-    - if: $CI_COMMIT_REF_NAME == "main"
-    - if: $CI_COMMIT_TAG
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: always
+    - when: never
   script:
     - vendor/bin/dep feature:stop stage --feature=$UPSTREAM_BRANCH $DEPLOYER_CONFIG_ADDITIONAL_OPTION
