fix: format script commands in sync feature YAML files for better readability

--- a/sync/sync-feature.yaml
+++ b/sync/sync-feature.yaml
@@ -5,16 +5,20 @@ sync:feature:
   stage: sync
   extends:
     - .ssh
-  dependencies: [ ]
+  dependencies: []
   variables:
     GIT_STRATEGY: fetch
     DEPLOYER_CONFIG_FEATURE_BRANCH_HOST: stage
   script:
     - !reference [.check-deployment-dependencies, script]
     # upgrade db-sync-tool
-    - pip3 install --quiet --disable-pip-version-check --root-user-action=ignore --user --upgrade db-sync-tool-kmi file-sync-tool-kmi --break-system-packages
+    - >
+      pip3 install --quiet --disable-pip-version-check --root-user-action=ignore
+      --user --upgrade db-sync-tool-kmi file-sync-tool-kmi --break-system-packages
     # sync stage
-    - vendor/bin/dep feature:sync $DEPLOYER_CONFIG_FEATURE_BRANCH_HOST --feature=$CI_COMMIT_REF_NAME $DEPLOYER_CONFIG_ADDITIONAL_OPTION
+    - >
+      vendor/bin/dep feature:sync $DEPLOYER_CONFIG_FEATURE_BRANCH_HOST
+      --feature=$CI_COMMIT_REF_NAME $DEPLOYER_CONFIG_ADDITIONAL_OPTION
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
