fix: update YAML linting configuration for improved readability and consistency

--- a/analyze/analyze-xml-lint.yaml
+++ b/analyze/analyze-xml-lint.yaml
@@ -8,7 +8,8 @@ analyze:xml:lint:
   image:
     name: ${DEFAULT_IMAGE_BUILD_COMPOSER}
   stage: analyze
-  needs: [ "build:php" ]
+  needs:
+    - build:php
   script:
     - apt-get update -qq && apt-get install libxml2-utils -qq
     - composer run lint:xml
