--- a/.github/workflows/cgl.yml
+++ b/.github/workflows/cgl.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Install yamllint
         run: sudo apt-get update && sudo apt-get install -y yamllint
       - name: Lint YAML files
-        run: yamllint .
+        run: yamllint -d relaxed .
