--- a/analyze/analyze-composer-lint.yaml
+++ b/analyze/analyze-composer-lint.yaml
@@ -8,7 +8,8 @@ analyze:composer:lint:
   image:
     name: ${DEFAULT_IMAGE_BUILD_COMPOSER}
   stage: analyze
-  needs: [ "build:php" ]
+  needs:
+    - build:php
   script:
     - composer run lint:composer:normalize
   rules:
