--- a/analyze/analyze-php-cs-fixer.yaml
+++ b/analyze/analyze-php-cs-fixer.yaml
@@ -8,7 +8,8 @@ analyze:php:cs-fixer:
   image:
     name: ${DEFAULT_IMAGE_BUILD_COMPOSER}
   stage: analyze
-  needs: [ "build:php" ]
+  needs:
+    - build:php
   script:
     - composer run lint:php:cs-fixer
   rules:
