--- a/analyze/analyze-yaml-lint.yaml
+++ b/analyze/analyze-yaml-lint.yaml
@@ -8,7 +8,8 @@ analyze:xml:lint:
   image:
     name: ${DEFAULT_IMAGE_BUILD_COMPOSER}
   stage: analyze
-  needs: [ "build:php" ]
+  needs:
+    - build:php
   script:
     - composer run lint:yaml
   rules:
