--- a/sync/sync-feature.yaml
+++ b/sync/sync-feature.yaml
@@ -21,8 +21,11 @@ sync:feature:
       --feature=$CI_COMMIT_REF_NAME $DEPLOYER_CONFIG_ADDITIONAL_OPTION
   rules:
     - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
+      when: manual
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
+      when: manual
     - if: $CI_COMMIT_REF_NAME == "main"
+      when: manual
     - if: $CI_COMMIT_TAG
       when: never
     - if: $CI_PIPELINE_SOURCE == "schedule"
