fix: update CI rules in YAML files for improved manual trigger conditions

--- a/.base.yaml
+++ b/.base.yaml
@@ -1,4 +1,9 @@
 #-----------------------------------------------------------------------------------------------------------------------
+# DEFAULT-DOCKER-IMAGE
+#-----------------------------------------------------------------------------------------------------------------------
+image: ghcr.io/move-elevator/php8.4-composer:latest
+
+#-----------------------------------------------------------------------------------------------------------------------
 # CONFIGURATION
 #-----------------------------------------------------------------------------------------------------------------------
 variables:
