--- a/deploy/deploy-prod-rollback.yaml
+++ b/deploy/deploy-prod-rollback.yaml
@@ -15,6 +15,8 @@ deploy:prod:rollback:
     - vendor/bin/dep deploy:unlock prod $DEPLOYER_CONFIG_ADDITIONAL_OPTION
     - vendor/bin/dep rollback prod $DEPLOYER_CONFIG_ADDITIONAL_OPTION
   rules:
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
     - if: $CI_COMMIT_REF_NAME == "main"
       when: manual
     - when: never
