--- a/deploy/deploy-prod.yaml
+++ b/deploy/deploy-prod.yaml
@@ -15,6 +15,8 @@ deploy:prod:
     - vendor/bin/dep deploy prod $DEPLOYER_CONFIG_ADDITIONAL_OPTION
     - vendor/bin/dep deploy:prod:notify prod
   rules:
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
     - if: $CI_COMMIT_REF_NAME == "main"
       when: manual
     - when: never
