--- a/deploy/deploy-prod-rollback.yaml
+++ b/deploy/deploy-prod-rollback.yaml
@@ -17,6 +17,8 @@ deploy:prod:rollback:
   rules:
     - if: $CI_PIPELINE_SOURCE == "pipeline"
       when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
     - if: $CI_COMMIT_REF_NAME == "main"
       when: manual
     - when: never
