--- a/deploy/deploy-feature-stop.yaml
+++ b/deploy/deploy-feature-stop.yaml
@@ -15,7 +15,7 @@ deploy:feature:stop:
     - if: $CI_COMMIT_REF_NAME == "main"
   variables:
     GIT_STRATEGY: none
-    FEATURE_STOP_DOWNSTREAM_BRANCH: feature-branch-deployment
+    FEATURE_STOP_DOWNSTREAM_BRANCH: main
   script:
     - curl --request POST --form "token=$CI_JOB_TOKEN" --form "variables[UPSTREAM_BRANCH]=$CI_COMMIT_REF_NAME" --form ref=$FEATURE_STOP_DOWNSTREAM_BRANCH "$CI_SERVER_URL/api/v4/projects/$CI_PROJECT_ID/trigger/pipeline"
   resource_group: $CI_COMMIT_REF_NAME
