fix: update CI rules in lint and deployment YAML files to prevent execution on pipeline and schedule sources

--- a/analyze/analyze-php.yaml
+++ b/analyze/analyze-php.yaml
@@ -13,8 +13,12 @@ analyze:php:
   script:
     - composer run lint:php
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.php"
