--- a/analyze/analyze-composer-lint.yaml
+++ b/analyze/analyze-composer-lint.yaml
@@ -13,8 +13,12 @@ analyze:composer:lint:
   script:
     - composer run lint:composer:normalize
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "composer.json"
