--- a/analyze/analyze-editorconfig.yaml
+++ b/analyze/analyze-editorconfig.yaml
@@ -13,6 +13,11 @@ analyze:editorconfig:
   script:
     - composer run lint:editorconfig
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
+      when: always
