--- a/analyze/analyze-php-cs-fixer.yaml
+++ b/analyze/analyze-php-cs-fixer.yaml
@@ -13,8 +13,12 @@ analyze:php:cs-fixer:
   script:
     - composer run lint:php:cs-fixer
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.php"
