--- a/analyze/analyze-typoscript-lint.yaml
+++ b/analyze/analyze-typoscript-lint.yaml
@@ -13,9 +13,13 @@ analyze:typoscript:lint:
   script:
     - composer run lint:typoscript
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.typoscript"
         - "**/*.tsconfig"
