--- a/analyze/analyze-xml-lint.yaml
+++ b/analyze/analyze-xml-lint.yaml
@@ -14,8 +14,10 @@ analyze:xml:lint:
     - apt-get update -qq && apt-get install libxml2-utils -qq
     - composer run lint:xml
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.xml"
