--- a/analyze/analyze-yaml-lint.yaml
+++ b/analyze/analyze-yaml-lint.yaml
@@ -13,9 +13,11 @@ analyze:xml:lint:
   script:
     - composer run lint:yaml
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+    - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
-    - if: '$CI_COMMIT_TAG == null'
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
+    - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.yaml"
         - "**/*.yml"
