--- a/deploy/deploy-feature.yaml
+++ b/deploy/deploy-feature.yaml
@@ -11,6 +11,8 @@ deploy:feature:
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
     - if: $CI_COMMIT_TAG
       when: never
     - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
