--- a/sync/sync-feature.yaml
+++ b/sync/sync-feature.yaml
@@ -24,6 +24,8 @@ sync:feature:
       when: never
     - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
+    - if: $CI_PIPELINE_SOURCE == "pipeline"
+      when: never
     - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
       when: manual
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
