fix: add reference to check deployment dependencies in deploy-feature-stop-downstream.yaml

--- a/deploy/deploy-feature-stop-downstream.yaml
+++ b/deploy/deploy-feature-stop-downstream.yaml
@@ -10,4 +10,5 @@ deploy:feature:stop:downstream:
       when: always
     - when: never
   script:
+    - !reference [.check-deployment-dependencies, script]
     - vendor/bin/dep feature:stop stage --feature=$UPSTREAM_BRANCH $DEPLOYER_CONFIG_ADDITIONAL_OPTION
