feat: add CI jobs for generating release notes and creating releases in GitLab

--- a/.base.yaml
+++ b/.base.yaml
@@ -28,6 +28,7 @@ stages:
   - deploy.feature
   - sync
   - deploy.prod
+  - release
 
 #-----------------------------------------------------------------------------------------------------------------------
 # SSH
