refactor: update deploy-feature.yaml to rename on_stop action from feature:stop to feature:cleanup

--- a/deploy/deploy-feature.yaml
+++ b/deploy/deploy-feature.yaml
@@ -28,6 +28,6 @@ deploy:feature:
   environment:
     name: $CI_COMMIT_REF_NAME
     url: $ENVIRONMENT_URL
-    on_stop: deploy:feature:stop
+    on_stop: deploy:feature:cleanup
     auto_stop_in: 3 months
   allow_failure: false
