--- a/.base.yaml
+++ b/.base.yaml
@@ -27,7 +27,9 @@ stages:
   - analyze
   - deploy.feature
   - sync
+  - test
   - deploy.prod
+  - test.prod
   - release
 
 #-----------------------------------------------------------------------------------------------------------------------
