--- a/test/test-prod-codeception.yaml
+++ b/test/test-prod-codeception.yaml
@@ -14,7 +14,7 @@ test:prod:codeception:
       alias: selenium
   needs:
     - build:php
-    - build:node
+    - deploy:feature
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
@@ -24,7 +24,7 @@ test:prod:codeception:
       when: manual
     - when: never
   variables:
-    SELENIUM_HOST: 'selenium'
+    SELENIUM_HOST: 'selenium-chrome'
     TESTING_DOMAIN: https://$DOMAIN_PROD/
   script:
     - !reference [.check-deployment-dependencies, script]
