--- a/test/test-prod-codeception.yaml
+++ b/test/test-prod-codeception.yaml
@@ -6,12 +6,6 @@
 #
 test:prod:codeception:
   stage: test.prod
-  image:
-    name: codeception/codeception
-    entrypoint: [ "" ]
-  services:
-    - name: selenium/standalone-chrome:latest
-      alias: selenium
   needs:
     - build:php
     - deploy:feature
@@ -24,8 +18,7 @@ test:prod:codeception:
       when: manual
     - when: never
   variables:
-    SELENIUM_HOST: 'selenium-chrome'
-    TESTING_DOMAIN: https://$DOMAIN_PROD/
+    TYPO3_BASEURL: https://$DOMAIN_PROD/
   script:
     - !reference [.check-deployment-dependencies, script]
     - vendor/bin/codecept run --html --steps
