fix: update artifact paths in Codeception configuration files

--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -27,5 +27,5 @@ test:feature:codeception:
   artifacts:
     when: always
     paths:
-      - tests/Acceptance/_output/**
+      - tests/_output/**
     expire_in: 1 day
