fix: update Codeception test scripts to log base URL and adjust artifact paths

--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -23,9 +23,10 @@ test:feature:codeception:
     TYPO3_BASEURL: https://$DOMAIN_STAGE/$CI_COMMIT_REF_NAME/
   script:
     - !reference [.check-deployment-dependencies, script]
+    - echo "Running Codeception tests on $TYPO3_BASEURL"
     - vendor/bin/codecept run --html --steps
   artifacts:
     when: always
     paths:
-      - tests/_output/**
+      report: tests/_output/report.html
     expire_in: 1 day
