fix: correct artifact path syntax in Codeception configuration files

--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -28,5 +28,5 @@ test:feature:codeception:
   artifacts:
     when: always
     paths:
-      report: tests/_output/report.html
+      - tests/_output/report.html
     expire_in: 1 day
