fix: update feature branch naming regex in deployment and sync configurations

--- a/sync/sync-feature.yaml
+++ b/sync/sync-feature.yaml
@@ -26,7 +26,7 @@ sync:feature:
       when: never
     - if: $CI_PIPELINE_SOURCE == "pipeline"
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
+    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
       when: manual
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
       when: manual
