--- a/deploy/deploy-feature.yaml
+++ b/deploy/deploy-feature.yaml
@@ -15,7 +15,7 @@ deploy:feature:
       when: never
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
+    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
     - if: $CI_COMMIT_REF_NAME == "main"
   resource_group: $CI_COMMIT_REF_NAME
