--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -16,7 +16,7 @@ test:feature:codeception:
       when: never
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /$FEATURE_BRANCH_NAME_REGEX/
+    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
     - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
     - if: $CI_COMMIT_REF_NAME == "main"
   variables:
