--- a/test/cache-feature-warmup.yaml
+++ b/test/cache-feature-warmup.yaml
@@ -1,11 +1,13 @@
 # Purpose:
-#   Test a feature branch instance with codeception
+#   Runs a cache warmup for a feature branch on a staging system
 #
 # Dependency:
-#   Codeception
+#   EXT:typo3-warming
 #
-test:feature:codeception:
+cache:feature:warmup:
   stage: test
+  extends:
+    - .ssh
   needs:
     - build:php
     - deploy:feature
@@ -23,10 +25,5 @@ test:feature:codeception:
     TYPO3_BASEURL: https://$DOMAIN_STAGE/$CI_COMMIT_REF_NAME/
   script:
     - !reference [.check-deployment-dependencies, script]
-    - echo "\e[33mRunning Codeception tests on $TYPO3_BASEURL\e[0m"
-    - vendor/bin/codecept run --html --steps
-  artifacts:
-    when: always
-    paths:
-      - tests/_output/report.html
-    expire_in: 1 day
+    - echo "\e[33mRunning cache warmup on $TYPO3_BASEURL\e[0m"
+    - vendor/bin/dep cache:warmup stage --feature=$CI_COMMIT_REF_NAME -v
