--- a/deploy/deploy-feature-rollback.yaml
+++ b/deploy/deploy-feature-rollback.yaml
@@ -15,9 +15,8 @@ deploy:feature:rollback:
       when: never
     - if: $CI_PIPELINE_SOURCE == "pipeline"
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
-    - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
-    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME =~ /^(main|feature-.*|[A-Z]{2,}-\d+-.*)$/
+      when: always
   variables:
     DEPLOYER_CONFIG_FEATURE_BRANCH_HOST: stage
   script:
