--- a/deploy/deploy-feature.yaml
+++ b/deploy/deploy-feature.yaml
@@ -15,9 +15,8 @@ deploy:feature:
       when: never
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
-    - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
-    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME =~ /^(main|feature-.*|[A-Z]{2,}-\d+-.*)$/
+      when: always
   resource_group: $CI_COMMIT_REF_NAME
   variables:
     DEPLOYER_CONFIG_FEATURE_BRANCH_HOST: stage
