--- a/sync/sync-feature.yaml
+++ b/sync/sync-feature.yaml
@@ -26,9 +26,7 @@ sync:feature:
       when: never
     - if: $CI_PIPELINE_SOURCE == "pipeline"
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
-      when: manual
-    - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
+    - if: $CI_COMMIT_REF_NAME =~ /^(feature-.*|[A-Z]{2,}-\d+-.*)$/
       when: manual
     - if: $CI_COMMIT_REF_NAME == "main"
       when: manual
