--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -16,9 +16,7 @@ test:feature:codeception:
       when: never
     - if: $CI_COMMIT_TAG
       when: never
-    - if: $CI_COMMIT_REF_NAME =~ /^[A-Z]{2,}-\d+-.*$/
-    - if: $CI_COMMIT_REF_NAME =~ /^feature-.*$/
-    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME =~ /^(main|feature-.*|[A-Z]{2,}-\d+-.*)$/
   variables:
     TYPO3_BASEURL: https://$DOMAIN_STAGE/$CI_COMMIT_REF_NAME/
   script:
