--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -21,7 +21,7 @@ test:feature:codeception:
     TYPO3_BASEURL: https://$DOMAIN_STAGE/$CI_COMMIT_REF_NAME/
   script:
     - !reference [.check-deployment-dependencies, script]
-    - echo "\e[33mRunning Codeception tests on $TYPO3_BASEURL\e[0m"
+    - echo -e "\e[33mRunning Codeception tests on $TYPO3_BASEURL\e[0m"
     - vendor/bin/codecept run --html --steps
   artifacts:
     when: always
