--- a/deploy/deploy-feature-rollback.yaml
+++ b/deploy/deploy-feature-rollback.yaml
@@ -16,11 +16,11 @@ deploy:feature:rollback:
     - if: $CI_PIPELINE_SOURCE == "pipeline"
       when: never
     - if: $CI_COMMIT_REF_NAME =~ /^(main|feature-.*|[A-Z]{2,}-\d+-.*)$/
-      when: always
+      when: manual
+    - when: never
   variables:
     DEPLOYER_CONFIG_FEATURE_BRANCH_HOST: stage
   script:
     - vendor/bin/dep deploy:unlock $DEPLOYER_CONFIG_FEATURE_BRANCH_HOST --feature=$CI_COMMIT_REF_NAME $DEPLOYER_CONFIG_ADDITIONAL_OPTION
     - vendor/bin/dep rollback $DEPLOYER_CONFIG_FEATURE_BRANCH_HOST  --feature=$CI_COMMIT_REF_NAME $DEPLOYER_CONFIG_ADDITIONAL_OPTION
-  when: manual
   allow_failure: true
