--- a/analyze/analyze-editorconfig.yaml
+++ b/analyze/analyze-editorconfig.yaml
@@ -15,9 +15,7 @@ analyze:editorconfig:
   rules:
     - if : $CI_PIPELINE_SOURCE == "web"
       when: always
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "pipeline"
+    - if: $CI_COMMIT_TAG || $CI_PIPELINE_SOURCE == "schedule" || $CI_PIPELINE_SOURCE == "pipeline" || $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
     - if: $CI_COMMIT_TAG == null
       when: always
