--- a/analyze/analyze-xml-lint.yaml
+++ b/analyze/analyze-xml-lint.yaml
@@ -14,10 +14,9 @@ analyze:xml:lint:
     - apt-get update -qq && apt-get install libxml2-utils -qq
     - composer run lint:xml
   rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "pipeline"
-      when: never
+    - if : $CI_PIPELINE_SOURCE == "web"
+      when: always
+    - if: $CI_COMMIT_TAG || $CI_PIPELINE_SOURCE == "schedule" || $CI_PIPELINE_SOURCE == "pipeline" || $CI_PIPELINE_SOURCE == "merge_request_event"
     - if: $CI_COMMIT_TAG == null
       changes:
         - "**/*.xml"
