--- a/deploy/deploy-feature-cleanup.yaml
+++ b/deploy/deploy-feature-cleanup.yaml
@@ -6,11 +6,7 @@ deploy:feature:cleanup:
   extends:
     - .ssh
   rules:
-    - if: $CI_COMMIT_TAG
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "pipeline"
+    - if: $CI_COMMIT_TAG || $CI_PIPELINE_SOURCE == "schedule" || $CI_PIPELINE_SOURCE == "pipeline" || $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
     - if: $CI_COMMIT_REF_NAME =~ /^(feature-.*|[A-Z]{2,}-\d+-.*)$/
       when: manual
