--- a/test/test-prod-codeception.yaml
+++ b/test/test-prod-codeception.yaml
@@ -10,9 +10,7 @@ test:prod:codeception:
     - build:php
     - deploy:prod
   rules:
-    - if: $CI_PIPELINE_SOURCE == "schedule"
-      when: never
-    - if: $CI_PIPELINE_SOURCE == "pipeline"
+    - if: $CI_COMMIT_TAG || $CI_PIPELINE_SOURCE == "schedule" || $CI_PIPELINE_SOURCE == "pipeline" || $CI_PIPELINE_SOURCE == "merge_request_event"
       when: never
     - if: $CI_COMMIT_REF_NAME == "main"
       when: manual
