fix: update cache warmup stages and dependencies in configuration files

--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -7,8 +7,7 @@
 test:feature:codeception:
   stage: test
   needs:
-    - build:php
-    - deploy:feature
+    - cache:feature:warmup
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
       when: never
