--- a/.base.yaml
+++ b/.base.yaml
@@ -25,8 +25,10 @@ stages:
   - analyze
   - deploy.feature
   - sync
+  - cache
   - test
   - deploy.prod
+  - cache.prod
   - test.prod
   - release
 
