--- a/test/test-feature-codeception.yaml
+++ b/test/test-feature-codeception.yaml
@@ -7,6 +7,7 @@
 test:feature:codeception:
   stage: test
   needs:
+    - build:php
     - cache:feature:warmup
   rules:
     - if: $CI_COMMIT_TAG || $CI_PIPELINE_SOURCE == "schedule" || $CI_PIPELINE_SOURCE == "pipeline" || $CI_PIPELINE_SOURCE == "merge_request_event"
