--- a/analyze/analyze-js-lint.yaml
+++ b/analyze/analyze-js-lint.yaml
@@ -19,5 +19,4 @@ analyze:js:lint:
       when: never
     - if: $CI_COMMIT_TAG == null
       changes:
-        - "**/*.js"
-        - "**/*.ts"
+        - "**/*.{js,jsx,mjs,cjs,ts,tsx}"
