--- a/analyze/analyze-style-lint.yaml
+++ b/analyze/analyze-style-lint.yaml
@@ -19,4 +19,4 @@ analyze:style:lint:
       when: never
     - if: $CI_COMMIT_TAG == null
       changes:
-        - "**/*.scss"
+        - "**/*.{css,scss,sass}"
