fix: add artifacts and dependencies for JavaScript and style linting jobs

--- a/analyze/analyze-js-lint.yaml
+++ b/analyze/analyze-js-lint.yaml
@@ -10,6 +10,12 @@ analyze:js:lint:
   stage: analyze
   needs:
     - build:node
+  dependencies:
+    - build:node
+  artifacts:
+    reports: { }
+    paths:
+      - node_modules/
   script:
     - npm run lint:js
   rules:
