--- a/analyze/analyze-style-lint.yaml
+++ b/analyze/analyze-style-lint.yaml
@@ -10,6 +10,12 @@ analyze:style:lint:
   stage: analyze
   needs:
     - build:node
+  dependencies:
+    - build:node
+  artifacts:
+    reports: { }
+    paths:
+      - node_modules/
   script:
     - npm run lint:style
   rules:
