fix: set expiration for artifacts in linting and release notes configurations

--- a/analyze/analyze-js-lint.yaml
+++ b/analyze/analyze-js-lint.yaml
@@ -16,6 +16,7 @@ analyze:js:lint:
     reports: { }
     paths:
       - node_modules/
+    expire_in: 1 day
   script:
     - npm run lint:js
   rules:
