feat: add security stage

--- a/.base.yaml
+++ b/.base.yaml
@@ -31,6 +31,7 @@ stages:
   - cache.prod
   - test.prod
   - release
+  - security
 
 #-----------------------------------------------------------------------------------------------------------------------
 # SSH
